# bugtracker

./: manage.py  pyproject.toml
bugtracker/: admin.py  forms.py  models.py  urls.py  views.py
bugtracker/migrations/: 0001_initial.py  0002_auto_20200527_1750.py
bugtracker/templates/: base.html  edit_ticket_form.html  generic_form.html  index.html  login_form.html  newuser_detail.html  newuser_form.html  submit_ticket_form.html  ticket_detail.html
django_bugtracker/: asgi.py  settings.py  urls.py
django_bugtracker/django_bugtracker/: settings.py  urls.py  wsgi.py
