[tool.poetry]
name = "bugtracker"
version = "0.1.0"
description = ""
authors = ["Julita Marshall <julitamcg5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
